Fix the !ENABLE(CSS_BOX_DECORATION_BREAK) build https://bugs.webkit.org/show_bug.cgi?id=164478

Reviewed by Darin Adler.

* css/parser/CSSParserFastPaths.cpp:
(WebCore::CSSParserFastPaths::isValidKeywordPropertyAndValue):


Canonical link: https://commits.webkit.org/182397@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208679 268f45cc-cd09-0410-ab3c-d52691b4dbfc